# html-renderfriend

./: .gitignore  CLAUDE.md  LICENSE  README.md  gui.bat  html2png_gui.py  htmlrf_gui.py  pyproject.toml  requirements.txt  screenshot.bat  screenshot.py  setup.bat  setuptools-hatch-migrate-examples.txt
.claude/: TODO.md  settings.local.json
.claude/skills/build-exe/: SKILL.md
.claude/skills/python-packager/: SKILL.md
.claude/skills/python-packager/evals/: evals.json
.claude/skills/python-packager/references/: packaging-standards.md  pyproject-templates.md
.claude/skills/run-tests/: SKILL.md
docs/: CHANGELOG.md
src/htmlrf/: gui.py  screenshot.py
tests/: test_filename.py  test_gui.py  test_screenshot.py
