[build-system]
requires      = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name            = "html-renderfriend"
version         = "1.0.0"
description     = "Full-page HTML/URL to PNG screenshotter — CLI + drag-and-drop GUI"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.50.0",
    "customtkinter>=5.2.2",
    # tkinterdnd2: Windows-native OLE drag-and-drop bridge for Tkinter
    "tkinterdnd2>=0.3.0",
    # darkdetect: OS dark/light theme detection (also a transitive dep of customtkinter)
    "darkdetect>=0.8.0",
]

[dependency-groups]
# Development / testing — not included in published distributions
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
# Distribution name (html-renderfriend) differs from import name (htmlrf),
# so hatchling needs an explicit pointer to the package directory.
packages = ["src/htmlrf"]

[project.scripts]
# CLI entry point — allows `htmlrf-screenshot` after pip install
htmlrf-screenshot = "htmlrf.screenshot:main"

[project.gui-scripts]
# GUI entry point — windowed launcher (no console window on Windows)
htmlrf = "htmlrf.gui:main"

# ── PyInstaller notes ──────────────────────────────────────────────────────────
# Install the package first so PyInstaller can trace the htmlrf package:
#   pip install -e .
#   pip install pyinstaller
#
# Build a single-file windowed EXE (Windows):
#   pyinstaller --onefile --windowed --name htmlrf src/htmlrf/gui.py
#
# Playwright's Chromium is NOT bundled — it is downloaded separately via:
#   playwright install chromium
