[build-system]
requires      = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name            = "html-renderfriend"
version         = "2.1.0"
description     = "Full-page HTML/URL to PNG screenshotter — CLI + drag-and-drop GUI"
readme          = "README.md"
license         = {text = "MIT"}            # PEP 639 SPDX form (was: {file = "LICENSE"})
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.50.0",
    "customtkinter>=5.2.2",
    # tkinterdnd2: Windows-native OLE drag-and-drop bridge for Tkinter
    "tkinterdnd2>=0.3.0",
    # darkdetect: OS dark/light theme detection (also a transitive dep of customtkinter)
    "darkdetect>=0.8.0",
]

[dependency-groups]
# Development / testing — not included in published distributions
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
# Distribution name (html-renderfriend) differs from import name (htmlrf),
# so hatchling needs an explicit pointer to the package directory.
packages = ["src/htmlrf"]

[project.scripts]
# CHANGED: CLI command renamed from htmlrf-screenshot to htmlrf
# WHY: user-facing command for CLI should be the short, primary name
htmlrf = "htmlrf.screenshot:main"

[project.gui-scripts]
# CHANGED: GUI command renamed from htmlrf to htmlrf-gui
# WHY: GUI launcher needs a distinct name now that htmlrf is taken by the CLI
htmlrf-gui = "htmlrf.gui:main"

# ── PyInstaller notes ──────────────────────────────────────────────────────────
# Install the package first so PyInstaller can trace the htmlrf package:
#   pip install -e .
#   pip install pyinstaller
#
# Build a single-file windowed EXE (Windows):
#   pyinstaller --onefile --windowed --name htmlrf src/htmlrf/gui.py
#
# Playwright's Chromium is NOT bundled — it is downloaded separately via:
#   playwright install chromium
